# grep-hs

./: CHANGELOG.md  README.md  grep-hs.cabal
src/: Main.hs
